--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
 }
 
 .body{
-    background-image: url("../../Assets/Hero-bg.png");
+    background-image: url("Assets/Hero-bg.png");
     background-size: cover;
     background-repeat: no-repeat;
     }
@@ -93,4 +93,9 @@ users{
     border: none;
     border-radius: 10px;
     padding: 12px 36px;
+}
+.box{
+    color: 
+    height: 306px;
+    width: 1140px;
 }
