--- a/styles.css
+++ b/styles.css
@@ -85,17 +85,37 @@
     text-align: left;
 }
 
-users{
-    background-color: #000000;
-    color: white;
+.users{
+    background-color: #EEEDFF;
+    color: #252432;
     font-weight: 700;
     font-size: 16px;
     border: none;
-    border-radius: 10px;
-    padding: 12px 36px;
+    border-radius: 20px;
+    text-align: center;
+     margin: 116px 150px;
 }
-.box{
-    color: 
-    height: 306px;
-    width: 1140px;
+.stats-heading {
+  font-size: 38px;
+  font-weight: 700;
+  color: #252432;
+  padding-top: 50px;
+}
+.numbers{
+  font-size: 80px;
+  font-weight: 800;
+  color: #4b44ff;
+
+}
+.container{
+  display: flex;
+  justify-content: space-around;
+
+}
+
+.label {
+  font-size: 20px;
+  font-weight:400;
+  color: #6F6E77;
+  padding-bottom: 50px;
 }
