--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@
 }
 
 .nav{
-    margin: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -45,13 +44,13 @@
     border: none;
     border-radius: 10px;
     padding: 12px 36px;
-    margin: 0px 0px 152px 0px; 
 }
 
 .body{
     background-image: url("Assets/Hero-bg.png");
-    background-size: cover;
+    background-size:cover;
     background-repeat: no-repeat;
+    padding-bottom: 50px;
     }
 
 .banner{
@@ -59,14 +58,16 @@
     color: #252432;
     font-size: 65px;
     text-align: center;
-     /* padding: 309px 0px 152px 0px; */ 
 } 
+
+.overall{background-color: #F5F8FF;}
 
 .action{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 116px 150px;
+    margin: 0px 150px;
+    padding-top: 50px;
 }
 #wc{
     border-radius: 50px;
@@ -93,7 +94,7 @@
     border: none;
     border-radius: 20px;
     text-align: center;
-     margin: 116px 150px;
+    margin: 116px 150px;
 }
 .stats-heading {
   font-size: 38px;
@@ -110,7 +111,6 @@
 .container{
   display: flex;
   justify-content: space-around;
-
 }
 
 .label {
@@ -118,4 +118,55 @@
   font-weight:400;
   color: #6F6E77;
   padding-bottom: 50px;
+}
+.login{
+    margin: 116px 150px;
+}
+.login-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.login-welcome{
+    font-size: 97px;
+    font-weight: 700;
+
+}
+
+.btn-login{
+    background-color: #4E47FF;
+    color: white;
+    font-weight: 700;
+    font-size: 16px;
+    border: none;
+    border-radius: 10px;
+    padding: 19px 201px;
+}
+
+.login-input{
+    width: 497px;
+    border: none;
+    border-radius: 10px;
+}
+
+.foot-main{
+    text-align:center;
+    padding-bottom:100px;
+}
+
+.foot{
+    color: #4E47FF;
+    font-size: 100px;
+    font-weight: 900;
+}
+.foot-d{
+    color: #8987A1;
+    /* font-size: 100px;
+    font-weight: 900; */
+}
+.foot-c{
+    display: flex;
+    justify-content: center;
+    gap: 48px;
+    color: #8987A1;
 }
