--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@
 
 .review{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     margin: 116px 150px; 
 }
@@ -219,7 +219,19 @@
     /* box-shadow: 10px 10px 10px 10px #000000; */
     width:367px;
     height:243px;
-    padding: 10px;
+    padding-left: 10px;
+    padding-top:10px;
 
 }
 #icon{border-radius:500px }
+
+.color2{
+    color: #757575
+}
+
+.color3{
+    color: #B3B3B3
+}
+.color1{
+    color: #1E1E1E
+}
