--- a/styles.css
+++ b/styles.css
@@ -226,12 +226,12 @@
 #icon{border-radius:500px }
 
 .color2{
-    color: #757575
+    color: #757575;
 }
 
 .color3{
-    color: #B3B3B3
+    color: #B3B3B3;
 }
 .color1{
-    color: #1E1E1E
+    color: #1E1E1E;
 }
